stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_monitor_unknown_actor_id.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/monitor_unknown_actor_id.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × monitor target is unknown
   ╭─[tests/fixtures/diagnostics/actors/monitor_unknown_actor_id.ml:2:3]
 1 │ fn main() {
 2 │   monitor(worker);
   ·   ───────┬───────
   ·          ╰── `worker` is not bound in this scope
 3 │   dbg("done")
   ╰────
  help: send to the result of `spawn { ... }`
