stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_body_two_statements.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/body/two-statements.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported main body
   ╭─[tests/fixtures/diagnostics/body/two-statements.ml:1:11]
 1 │ ╭─▶ fn main() {
 2 │ │     println("first");
 3 │ │     println("second");
 4 │ ├─▶ }
   · ╰──── stage0 currently allows one direct output expression unless actor actions are present
   ╰────
  help: use a single dbg/println expression
