stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_entrypoints_missing_main.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/entrypoints/missing-main.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × missing main function
   ╭─[tests/fixtures/diagnostics/entrypoints/missing-main.ml:1:1]
 1 │ ╭─▶ fn start() {
 2 │ │     println("hello world")
 3 │ ├─▶ }
   · ╰──── stage0 compile requires one entrypoint named main
   ╰────
  help: add: fn main() { dbg("hello world") }
