stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_equality_string_i64.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/equality_string_i64.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × equality operands have different types
   ╭─[tests/fixtures/diagnostics/types/equality_string_i64.ml:2:7]
 1 │ fn main() {
 2 │   dbg("riot" == 1)
   ·       ─────┬─────
   ·            ╰── left side has type `String`, but right side has type `i64`
 3 │ }
   ╰────
  help: compare values with the same type
