stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_match_arm_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_match_arm_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × match arms have different types
   ╭─[tests/fixtures/diagnostics/types/inference_match_arm_mismatch.ml:2:16]
 1 │     fn main() {
 2 │ ╭─▶   let result = match true {
 3 │ │       true -> 1,
 4 │ │       _ -> "no"
 5 │ ├─▶   };
   · ╰──── one arm has type `i64`, but another arm has type `String`
 6 │       dbg(result)
   ╰────
  help: make every match arm produce the same type
