stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_match_list_missing_empty.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/match_list_missing_empty.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × non-exhaustive match expression
   ╭─[tests/fixtures/diagnostics/types/match_list_missing_empty.ml:3:7]
 2 │       let items = [1, 2];
 3 │ ╭─▶   dbg(match items {
 4 │ │       [head, ..tail] -> head
 5 │ ├─▶   })
   · ╰──── the match arms are missing list case(s): []
 6 │     }
   ╰────
  help: add the missing constructors, list cases, or a final `_ -> ...` arm
