stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_match_non_exhaustive.snap
---
source: tests/fixtures.rs
assertion_line: 1232
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/match_non_exhaustive.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × non-exhaustive match expression
   ╭─[tests/fixtures/diagnostics/types/match_non_exhaustive.ml:2:7]
 1 │     fn main() {
 2 │ ╭─▶   dbg(match 1 {
 3 │ │       0 -> "zero"
 4 │ ├─▶   })
   · ╰──── the match arms do not cover every value of the scrutinee type
 5 │     }
   ╰────
  help: add the missing constructors, list cases, or a final `_ -> ...` arm
